add twig template

--- a/twig_templates/index.html.twig
+++ b/twig_templates/index.html.twig
@@ -8,8 +8,6 @@
   <meta name="author" content="SitePoint">
 </head>
 <body>
-ide jön valami: <?php print htmlspecialchars($name); ?>
-
-ide jön valami: {{ $name }}
+ide jön valami: {{ name }}
 </body>
 </html>
